# Integer-Linear-Programming

./: .gitignore  CMakeLists.txt
cmake/: integer_solverConfig.cmake
include/lp/: brute_force.h  highs_interface.h  ilp.h  lp.h  lp2.h  utils.h
include/utils/: lp.h  utils.h
js_widgets/: 3d.js  PivotSnippet.ts  RegionSnippet.ts  SlackSnippet.ts  package-lock.json  package.json  vite.config.js
js_widgets/src/: PivotSnippet.ts  RegionSnippet.ts  SlackSnippet.ts  index.ts
js_widgets/src/widgets/: 3d.ts  PivotSnippet.ts  RegionSnippet.ts  SlackSnippet.ts  index.d.ts  index.js
js_widgets/utils/: lp.ts  simplex.ts  simplex_cpp.ts
src/: brute_force.cpp  highs_interface.cpp  ilp.cpp  lp.cpp  lp2.cpp  utils.cpp
tests/: test.cpp  test2.cpp
